kubernetes/ingress-nginx/1-general.yml
# General ingress
# Don't forget about scrt-ingress-tls if you desire to work over ssl
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: scrt-ingress-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /api/(backend/.*)
            backend:
              serviceName: backend-service
              servicePort: 8810
