kubernetes/ingress-nginx/2-custom-auth.yml
# General ingress
# Don't forget about scrt-ingress-tls if you desire to work over ssl
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/auth-url: "https://<<host-url>>/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://<<host-auth>>/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: scrt-ingress-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /api/(backend/.*)
            backend:
              serviceName: backend
              servicePort: 8810
