kubernetes/ingress-nginx/4-deny-specific-path.yml
# General ingress
# 1. Don't forget about scrt-ingress-tls if you desire to work over ssl
# 2. "server-snippet" allows you to add configuration snippet to your nginx controller
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress-backend-deny
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/server-snippet: |-
      location ~* "^/api/backend/actuator" {
        deny all;
        return 403;
      }
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: scrt-ingress-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /api/backend/actuator(/.*)
            backend:
              serviceName: backend
              servicePort: 8810
